<resources>
    <string name="app_name">MaterialTheme</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Senha</string>
    <string name="btn_login">LOGIN</string>
    <string name="menu_buscar">Buscar</string>
    <string name="menu_carrinho">Carrinho</string>
    <string name="menu_config">Configurações</string>
    <string name="menu_sobre">Sobre</string>
    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Fechar</string>
    <string name="label_liga_desliga">Liga/Desliga</string>
    <string name="label_gosto_de_sorvete">Gosto de Sorvete</string>
    <string name="label_opcao_1">Opção 1</string>
    <string name="label_opcao_2">Opção 2</string>
    <string name="label_opcao_3">Opção 3</string>
    <string name="label_alert_dialog">ALERT DIALOG</string>
    <string name="label_dialog_items">DIALOG ITEMS</string>
    <string name="btn_acessar">ACESSAR</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_locacao">Locação</string>
    <string name="menu_caminho">Caminho</string>
    <string name="ssd">2sad13aasdfafd1a32f1a23df1 a f132a1 fad1 3as1d 3a1d3 asd 321ad3 21ad32f1 32asd1f32a1sdf3 21a32dsf13as1df3a1df32a1sdf231ad32f1as32df1a231df2asd1f2asd1</string>
</resources>
